--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.11",
     "nodemon": "^3.0.3",
     "socket.io": "^4.7.4",
+    "streamifier": "^0.1.1",
     "uuid": "^9.0.1"
   }
 }
